--- a/style.css
+++ b/style.css
@@ -1,6 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
+html{
+    font-family: 'Bebas Neue', cursive;
+}
+
+main {
+    max-width: 1440px;
+    text-align: center;
+}
+
+
+#img-div-bg img{
+    position: absolute;
+    z-index: -1;
+    max-width: 100%;
+    max-height: 100vh;
+    height: auto;
+
+    box-shadow: 0px 0px 30px 100px rgba(107,117,255,0.5);
+    filter: opacity(50%);
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+/* Wrapper */
+#wrapper{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+#wrapper *{
+    margin: 20px auto; 
+}
+
+#wrapper img{
+    max-width: 30%;
+    box-shadow: 0px 0px 0px 5px rgba(255,255,255,0.5);    
+    border-radius: 10px;
+    display: block;
+    align-items: center;
+}
+
+#tribute-info {
+    width: 50vw;
+    margin: 10px auto;
+    background: #fff;
+    border: 1px dashed black;
+}
+
+#tribute-link {
+    background: white;
+    padding: 5px;
+    border: dashed 1px black;
+}
+
+
+
 
